k8s/apps/experiments/s3-mongo-connector-ingress.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      ingress.kubernetes.io/rewrite-target: /
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/rewrite-target":"/"},"name":"ingress-test","namespace":"ingress-test"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"mongoconnector-service","servicePort":5678},"path":"/mongoconnector"},{"backend":{"serviceName":"s3connector-service","servicePort":5678},"path":"/s3connector"}]}}]}}
    creationTimestamp: "2020-07-27T21:17:14Z"
    generation: 1
    managedFields:
    - apiVersion: extensions/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:ingress.kubernetes.io/rewrite-target: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:rules: {}
      manager: kubectl
      operation: Update
      time: "2020-07-27T21:17:14Z"
    - apiVersion: extensions/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: traefik
      operation: Update
      time: "2020-07-27T21:17:14Z"
    name: ingress-test
    namespace: ingress-test
    resourceVersion: "20884787"
    selfLink: /apis/extensions/v1beta1/namespaces/ingress-test/ingresses/ingress-test
    uid: 1f26d3a2-1b37-4da0-a283-fc4ac4db0924
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: mongoconnector-service
            servicePort: 5678
          path: /mongoconnector
          pathType: ImplementationSpecific
        - backend:
            serviceName: s3connector-service
            servicePort: 5678
          path: /s3connector
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.10.210
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
