k8s/apps/experiments/simple-nginx-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx
  namespace: default

spec:
  rules:
      - http:
          paths:
            - path: /
              backend:
                serviceName: nginx
                servicePort: 80
